# luagit2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  binding_main.c  common.c  common.h  examplefile.c  initialize.h  install_libgit.sh  lua_blame.h  lua_clone.h  lua_libgit2.h  lua_repository.h  luagit2-0.0-1.rockspec
cmake/: FindLibGit2.cmake
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/basic/: annotated.rst  blame.rst  blob.rst  branch.rst  buf.rst  checkout.rst  clone.rst  commit.rst  config.rst  cred.rst  describe.rst  diff.rst  graph.rst  ignore.rst  index.rst  index_module.rst  libgit.rst  note.rst  object.rst  odb.rst  reference.rst  reflog.rst  repository.rst  reset.rst  revert.rst  revparse.rst  revwalk.rst  signature.rst  status.rst  tag.rst  tree.rst
docs/source/examples/: add_to_index.rst  blame_file.rst  clone.rst  diff_files.rst  index.rst  init_and_make_initial_commit.rst
docs/source/install/: cmake.rst  index.rst  luarocks.rst
docs/source/luagit2_objects/: index.rst  luagit2_objects.rst
examples/: add.lua  blame_file.lua  clone.lua  diff_file.lua  init_and_make_initial_commit.lua
src/: CMakeLists.txt  main_wrapper.c
src/header_files/: lua_clone.h  lua_commit.h  lua_config.h  lua_cred.h  lua_libgit2.h  lua_objects.h  lua_oid.h  lua_repository.h  lua_signature.h  lua_tree.h
src/helper_methods/: lua_libgit2_help.h
src/luagit2/: lua_objects.h
src/luagit2/annotated/: lua_annotated.c  lua_annotated.h
src/luagit2/blame/: lua_blame.c  lua_blame.h  lua_blame_help.c  lua_blame_help.h
src/luagit2/blob/: lua_blob.c  lua_blob.h
src/luagit2/branch/: lua_branch.c  lua_branch.h  lua_branch_help.c  lua_branch_help.h
src/luagit2/buf/: lua_buf.c  lua_buf.h  lua_buf_help.c  (+1 more)
tests/: .luacov  luagit2_commit_test.lua  luagit2_config_test.lua  luagit2_cred_test.lua  luagit2_libgit_test.lua  luagit2_main_test.lua  luagit2_oid_test.lua  luagit2_signature_test.lua  luagit2_tree_test.lua  simple_test.lua  test-all.sh
tests/Fixtures/: fix_repo.lua
tests/annotated/: annotated_cover.lua  test_annotated_spec.lua
tests/blame/: blame_cover.lua  test_blame_spec.lua
tests/blob/: blob_cover.lua  test_blob_spec.lua
tests/branch/: branch_cover.lua  test_branch_spec.lua
tests/buf/: test_buf_spec.lua
tests/checkout/: checkout_cover.lua  test_checkout_spec.lua
tests/commit/: commit_cover.lua  test_commit_spec.lua
tests/config/: config_cover.lua  test_config_spec.lua
tests/cred/: cred_cover.lua  test_cred_spec.lua
tests/describe/: describe_cover.lua  test_describe_spec.lua
tests/diff/: diff_cover.lua  test_diff_spec.lua
tests/graph/: test_graph_spec.lua
tests/ignore/: test_ignore_spec.lua
tests/index/: index_cover.lua  test_index_spec.lua
tests/libgit/: .busted  libgit_cover.lua  test_libgit_spec.lua
tests/note/: test_note_spec.lua
tests/object/: object_cover.lua  test_object_spec.lua
tests/odb/: test_odb_spec.lua
tests/oid/: oid_cover.lua  test_oid_spec.lua
tests/reference/: reference_cover.lua  test_reference_spec.lua
tests/reflog/: reflog_cover.lua  test_reflog_spec.lua
tests/repository/: repository_cover.lua  test_repository_spec.lua
tests/reset/: reset_cover.lua  test_reset_spec.lua
tests/revert/: revert_cover.lua  test_revert_spec.lua
tests/revparse/: revparse_cover.lua  test_revparse_spec.lua
tests/revwalk/: revwalk_cover.lua  test_revwalk_spec.lua
tests/signature/: signature_cover.lua  test_signature_spec.lua
tests/status/: test_status_spec.lua
tests/tag/: tag_cover.lua  test_tag_spec.lua
tests/tree/: .busted  test_tree_spec.lua  tree_cover.lua
(+80 files in other folders)
